--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,6 +83,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^20.16.11",
     "@types/react": "^18.3.11",
