--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,6 @@ dependencies = [
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "uvicorn>=0.35.0",
+    "cryptography>=43.0.0",
+    "email-validator>=2.0.0",
 ]
